# models/base_model_audit.go
@@ -1,15 +1,30 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"context"
+	"github.com/uptrace/bun"
+	"github.com/uptrace/bun/schema"
 	"time"
 )
 
+var _ bun.BeforeAppendModelHook = (*BaseModelAudit)(nil)
+
 type BaseModelAudit struct {
-	CreatedAt  time.Time `json:"-"` // Automatically managed by GORM for creation time
-	ModifiedAt time.Time `json:"-"` // Automatically managed by GORM for update time
+	CreatedAt  time.Time `json:"created_at" bun:",nullzero,notnull,default:current_timestamp"`
+	ModifiedAt time.Time `json:"modified_at" bun:",nullzero,notnull,default:current_timestamp"`
+}
+
+func (b *BaseModelAudit) BeforeAppendModel(ctx context.Context, query schema.Query) error {
+	switch query.(type) {
+	case *bun.InsertQuery:
+		b.CreatedAt = time.Now()
+		b.ModifiedAt = b.CreatedAt
+	case *bun.UpdateQuery:
+		b.ModifiedAt = time.Now()
+	}
+	return nil
 }
 
 type BaseModelSoftDelete struct {
-	DeletedAt gorm.DeletedAt `json:"-" gorm:"index"`
+	DeletedAt time.Time `json:"-" bun:",soft_delete,nullzero"`
 }
