# src/api/handlers/users.go
@@ -3,6 +3,8 @@ package handlers
 import (
 	"backend-boilerplate/models"
 	"github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin/binding"
+	"golang.org/x/crypto/bcrypt"
 	"net/http"
 )
 
@@ -18,7 +20,7 @@ func GetUser(c *gin.Context) *gin.Error {
 	if u.Id == "" {
 		return BadParameterError(BadRequestParameter, "user_id", c)
 	}
-	if err := u.GetById(); err != nil {
+	if err := u.GetById(c); err != nil {
 		return DatabaseError(err, "the user could not be found", c)
 	}
 
@@ -32,8 +34,8 @@ func GetUser(c *gin.Context) *gin.Error {
 // @Success 	200
 // @Router		/users [get]
 func GetUsers(c *gin.Context) *gin.Error {
-	u := models.Users{}
-	err := u.GetAll()
+	u := &models.Users{}
+	err := u.GetAll(c)
 	if err != nil {
 		return c.Error(DatabaseError(err, "could not retrieve user list", c))
 	}
@@ -45,7 +47,7 @@ func GetUsers(c *gin.Context) *gin.Error {
 // UpdateUser	godoc
 // @Summary		update a user
 // @Tags 		users
-// @Accept       json
+// @Accept      json
 // @Param		user_id path string true "user_id"
 // @Param		user body models.User true "user"
 // @Success 	200
@@ -57,15 +59,66 @@ func UpdateUser(c *gin.Context) *gin.Error {
 		return BadParameterError(BadRequestParameter, "user_id", c)
 	}
 
-	if err := u.GetById(); err != nil {
+	if err := u.GetById(c); err != nil {
 		return EntityNotFoundError(err, "user", c)
 	}
 	if err := c.ShouldBindJSON(u); err != nil {
 		return ValidatorError(err, "error validating user entity", c)
 	}
-	if err := u.Update(); err != nil {
+	if err := u.Update(c); err != nil {
 		return DatabaseError(err, "", c)
 	}
 	c.JSON(http.StatusOK, u)
+	return nil
+}
+
+// CreateUser 	godoc
+// @Summary		create a user
+// @Tags		users
+// @Accept		json
+// @Param		user_id path string true "user_id"
+// @Param		user body models.User true "user"
+// @Success 	200
+// @Router		/users [post]
+func CreateUser(c *gin.Context) *gin.Error {
+	u := &models.User{}
+	p := &models.UserPassword{}
+	if err := c.ShouldBindBodyWith(u, binding.JSON); err != nil {
+		return ValidatorError(err, "error validating user entity", c)
+	}
+	if err := c.ShouldBindBodyWith(p, binding.JSON); err != nil {
+		return ValidatorError(err, "error validating user entity", c)
+	}
+	if hash, err := bcrypt.GenerateFromPassword([]byte(p.Password), 10); err != nil {
+		return InternalError(err, "error creating the hashed password", c)
+	} else {
+		u.Password = string(hash)
+	}
+	if err := u.Create(c); err != nil {
+		return DatabaseError(err, "", c)
+	}
+	c.JSON(http.StatusOK, u)
+	return nil
+}
+
+// DeleteUser 	godoc
+// @Summary		delete a user
+// @Tags 		users
+// @Accept      json
+// @Param		user_id path string true "user_id"
+// @Success 	200
+// @Router		/users/{user_id} [delete]
+func DeleteUser(c *gin.Context) *gin.Error {
+	u := &models.User{}
+	u.Id = c.Param("user_id")
+	if u.Id == "" {
+		return BadParameterError(BadRequestParameter, "user_id", c)
+	}
+
+	if err := u.Delete(c); err != nil {
+		return DatabaseError(err, "", c)
+	}
+
+	c.Status(http.StatusNoContent)
 	return nil
 }
